add utils.copy objects method

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name" : "twitterpub",
-    "version" : "0.1",
     "description" : "API for twitter public streams with best practices",
     "keywords" : ["twitter", "streaming", "public"],
     "homepage" : "https://github.com/jimgswang/twitterpub",
     "author" : "jimgswang",
     "dependencies" : {
-        "request" : "1.2.32"
+        "request" : "2.27.0",
+        "mocha" : "1.14.0",
+        "should" : "2.1.0"
     }
 }
