add initial test case

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dependencies" : {
         "request" : "2.27.0",
         "mocha" : "1.14.0",
+        "nock" : "0.23.0",
+        "sinon" : "1.7.3",
         "should" : "2.1.0"
     }
 }
