--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
     "name" : "twitterpub",
-    "description" : "API for twitter public streams with best practices",
+    "description" : "API for twitter public streams with retry",
     "keywords" : ["twitter", "streaming", "public"],
-    "homepage" : "https://github.com/jimgswang/twitterpub",
-    "author" : "jimgswang",
-    "dependencies" : {
-        "request" : "2.34.0",
+    "repository" : "https://github.com/jimgswang/twitterstream",
+    "author" : "Jim Wang",
+    "devDependencies": {
         "mocha" : "1.14.0",
         "nock" : "0.23.0",
         "sinon" : "1.7.3",
         "should" : "2.1.0"
+    },
+    "dependencies" : {
+        "request" : "2.34.0"
     }
 }
