--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
     "name" : "twitterpub",
+    "version" : "0.1.1",
     "description" : "API for twitter public streams with retry",
     "keywords" : ["twitter", "streaming", "public"],
-    "repository" : "https://github.com/jimgswang/twitterstream",
+    "repository" : {
+        "type" : "git",
+        "url" : "https://github.com/jimgswang/twitterstream"
+    },
     "author" : "Jim Wang",
     "devDependencies": {
         "mocha" : "1.14.0",
-        "nock" : "0.23.0",
         "sinon" : "1.7.3",
         "should" : "2.1.0"
     },
