--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name" : "twitterpub",
+    "name" : "twitterstream",
     "version" : "0.1.1",
     "description" : "API for twitter public streams with retry",
     "keywords" : ["twitter", "streaming", "public"],
